# anomaly-kernels

./: AGENTS.md  CHANGELOG.md  CMakeLists.txt  PUBLIC-CLAIM.md  PUBLIC-DISCLAIMER.md  README.md  USAGE.md
.github/workflows/: ci.yml
docs/brand/: README.md
examples/: demo.cpp
include/anomaly/: alert_correlator.h  anomaly_scorer.h  baseline_builder.h  behavior_classifier.h
src/: alert_correlator.cpp  anomaly_scorer.cpp  baseline_builder.cpp  behavior_classifier.cpp
tests/: test_anomaly_alert_correlator.cpp  test_anomaly_anomaly_scorer.cpp  test_anomaly_baseline.cpp  test_anomaly_baseline_builder.cpp  test_anomaly_behavior_classifier.cpp  test_main.cpp
